tests/ui/option_string.stderr
error: unsupported element type of Option
 --> tests/ui/option_string.rs:4:19
  |
4 |         fn f() -> Option<String>;
  |                   ^^^^^^^^^^^^^^
